# computer-vision

./: CMakeLists.txt  README.md  conanfile.py  format.clang-tidy  lookindependency.txt  sorting.txt
ConanVersionResolver/: conanversionresolver.py
aselsan/base-library/: CMakeLists.txt  conanfile.py
aselsan/base-library/include/base-library/: base-library.h
aselsan/base-library/src/: base-library.cpp
base/: CMakeLists.txt
base/assertion/: CMakeLists.txt
base/assertion/include/assertion/: assertion.h
base/assertion/src/: assertion.cpp
base/assertion/test/: assertion-test.cpp  main.cpp
base/datetime/: CMakeLists.txt
base/datetime/include/datetime/: datetime.h
base/datetime/src/: datetime.cpp
base/datetime/test/: datetime-test.cpp
base/file/: CMakeLists.txt
base/file/include/file/: file.h
base/file/src/: file.cpp
base/file/test/: file-test.cpp
base/logger/: CMakeLists.txt
base/logger/include/logger/: logger.h
base/logger/src/: logger.cpp
base/logger/test/: logger-test.cpp
base/string/: CMakeLists.txt
base/string/include/string/: string.h
base/string/src/: string.cpp
base/string/test/: string-test.cpp
base/val-set-creator/: CMakeLists.txt  main.cpp
code-coverage/: CMakeLists.txt
code-coverage/code-coverage/: CMakeLists.txt
custom-conan-packages/: cuda_conanfile.py
custom-conan-packages/opencv/include/opencv2/: opencv_modules.hpp
deep-learning/: CMakeLists.txt
deep-learning/estimators/: CMakeLists.txt
deep-learning/estimators/age-estimator/: CMakeLists.txt
deep-learning/estimators/age-estimator/src/: age-estimator.cpp
deep-learning/estimators/ethnicity-estimator/: CMakeLists.txt
deep-learning/estimators/ethnicity-estimator/src/: ethnicity-estimator.cpp
deep-learning/estimators/gender-estimator/: CMakeLists.txt
deep-learning/estimators/gender-estimator/src/: gender-estimator.cpp
deep-learning/face-detection/: CMakeLists.txt
deep-learning/face-detection/include/face-detection/: face-detection.h
deep-learning/face-detection/src/: face-detection.cpp
deep-learning/face-recognition/: CMakeLists.txt
deep-learning/face-recognition/src/: face-recognition.cpp
deep-learning/face-warper/: CMakeLists.txt
deep-learning/face-warper/src/: face-warper.cpp
deep-learning/instance-segmentation/: CMakeLists.txt
deep-learning/instance-segmentation/src/: instance-segmentation.cpp
deep-learning/object-detection/: CMakeLists.txt
deep-learning/object-detection/include/object-detection/: object-detection.h
deep-learning/object-detection/src/: object-detection.cpp
deep-learning/object-detection/src/cli/: main.cpp
features/: CMakeLists.txt
features/feature-detector/: CMakeLists.txt
features/feature-detector/include/feature-detector/: feature-detector.h
features/feature-detector/resource/: FAST.features  HarrisCorner.features  SURF.features  ShiTomasiCorner.features
features/feature-detector/src/: feature-detector.cpp  main.cpp
features/feature-detector/src/cli/: BRIEF.h  BRISK.h  FAST.h  HarrisCornerDetector.h  ORB.h  SIFT.h  SURF.h  ShiTomasiCornerDetector.h  main.cpp
features/feature-detector/test/: Fixture.h  feature-detector-test.cpp
features/feature-matcher/: CMakeLists.txt
features/feature-matcher/src/: feature-matcher.cpp
helper/: CMakeLists.txt
helper/UTKFaceDataPreparation/: CMakeLists.txt
helper/UTKFaceDataPreparation/src/: main.cpp
helper/qr-barcode-reader/: CMakeLists.txt
helper/qr-barcode-reader/src/: qr-barcode-reader.cpp
homography/: CMakeLists.txt
homography/homography-calculator/: CMakeLists.txt
homography/homography-calculator/include/homography-calculator/: homography-calculator.h
homography/homography-calculator/src/: homography-calculator.cpp
homography/homography-calculator/src/cli/: KNN.h  RADIUS.h  REGULAR.h
homography/stitcher/: CMakeLists.txt
homography/stitcher/src/: stitcher.cpp
image-processing/: CMakeLists.txt
image-processing/file-storage/: CMakeLists.txt
image-processing/file-storage/resource/: Test.xml  Test.yml
image-processing/file-storage/src/: file-storage.cpp
image-processing/file-storage/test/: Fixture.h  file-storage-test.cpp
image-processing/histogram/: CMakeLists.txt
image-processing/histogram/include/histogram/: histogram.h
image-processing/histogram/src/: histogram.cpp
image-processing/histogram/test/: Fixture.h  histogram-test-gpu.cpp  histogram-test.cpp
install/opencv/: conanfile.py
machine-learning/: CMakeLists.txt
machine-learning/knn/: CMakeLists.txt
machine-learning/knn/include/knn/: knn.h  parameters.h
machine-learning/knn/src/: knn.cpp
machine-learning/knn/src/cli/: main.cpp
machine-learning/pca/: CMakeLists.txt
machine-learning/pca/src/: pca.cpp
machine-learning/preprocessing/: CMakeLists.txt
machine-learning/preprocessing/include/preprocessing/: preprocessing.h
machine-learning/preprocessing/src/: preprocessing.cpp
machine-learning/rtrees/: CMakeLists.txt
machine-learning/rtrees/src/: rtrees.cpp
osal/: CMakeLists.txt  conanfile.py
osal/cmake/toolchains/: toolchain_rtp_release.cmake
osal/osal-core/: CMakeLists.txt
osal/osal-core/source/: osal-core.cpp
osal/osal-windows/: CMakeLists.txt
osal/osal-windows/include/osal-windows/: osal-windows.h
osal/osal-windows/source/: osal-windows.cpp
resource/: HistogramResults.xml
ui/: CMakeLists.txt
ui/histogram/: CMakeLists.txt
ui/histogram/form/: QtWidgetsApplication1.ui
ui/histogram/include/histogram/: QtWidgetsApplication1.h
ui/histogram/src/: QtWidgetsApplication1.cpp  main.cpp
ui/ui-image-conversions/: CMakeLists.txt
ui/ui-image-conversions/include/ui-image-conversions/: ui-image-conversions.h
ui/ui-image-conversions/src/: ui-image-conversions.cpp
ui/ui-image-conversions/test/: Fixture.h  ui-image-conversions-test.cpp
video-processing/: CMakeLists.txt
video-processing/tracking/: CMakeLists.txt
video-processing/tracking/include/tracking/: tracking.h
video-processing/tracking/src/: tracking.cpp
video-processing/tracking/src/cli/: FaceTracking.cpp  InstanceSegmentationTracking.cpp  main.cpp
(+26 files in other folders)
